<resources>
    <string name="app_name">TheMovies</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="film_poster">film poster</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="original_title">Original title</string>
    <string name="release_date">Release date</string>
    <string name="summary">Summary</string>
    <string name="overview">Overview</string>
    <string name="rating">Rating</string>
    <string name="star">star</string>
    <string name="trailers">Trailers</string>
    <string name="play">play</string>
    <string name="reviews">Reviews</string>
    <string name="favorite_movies">Favorite movies</string>
    <string name="home_screen">Home screen</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string-array name="method_of_sort">
        <item>Popularity</item>
        <item>Rating</item>
        <item>Revenue</item>
        <item>Vote Count</item>
    </string-array>
    <string name="sort_by">Sort by</string>
    <string name="is_favorite">This movie is already favorite</string>
    <string name="movie_added">Movie Added</string>
    <string name="delete_from_favorite">Delete from favorite</string>
    <string name="was_added">Was Added</string>
    <string name="was_deleted">deleted from favorite</string>
</resources>