<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<!--    <data>-->
<!--        <variable-->
<!--            name="mainViewModel"-->
<!--            type="com.example.themovies.ui.fragments.MainViewModel" />-->
<!--    </data>-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_black">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.fragments.DetailFragment"
            android:background="@color/light_black">

            <ImageView
                android:id="@+id/imageViewBigPoster"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/film_poster"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

<!--            <ImageView-->
<!--                android:id="@+id/imageViewMakeFavorite"-->
<!--                android:layout_width="70dp"-->
<!--                android:layout_height="70dp"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@id/imageViewBigPoster"-->
<!--                app:layout_constraintBottom_toBottomOf="@id/imageViewBigPoster"-->
<!--                android:contentDescription="@string/add_to_favorite"-->
<!--                android:src="@drawable/favourite_remove"/>-->

            <TextView
                android:id="@+id/textViewOriginalTitleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/original_title"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:fontFamily="@font/per_regular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textViewOriginalTitleMovie"
                app:layout_constraintBottom_toBottomOf="@id/textViewOriginalTitleMovie"/>

            <TextView
                android:id="@+id/textViewOriginalTitleMovie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:fontFamily="@font/per_regular"
                android:textSize="27sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/imageViewBigPoster" />

            <TextView
                android:id="@+id/textViewReleaseDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/release_date"
                android:fontFamily="@font/per_regular"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/textViewReleaseDateMovie"
                app:layout_constraintBottom_toBottomOf="@id/textViewReleaseDateMovie"/>

            <TextView
                android:id="@+id/textViewReleaseDateMovie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="25sp"
                android:fontFamily="@font/per_italic"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/textViewOriginalTitleMovie" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.4" />

            <View
                android:id="@+id/viewLine"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/holo_red_light"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewReleaseDateMovie" />

            <TextView
                android:id="@+id/textViewSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/summary"
                android:textSize="31sp"
                android:fontFamily="@font/per_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewLine" />


            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewSummary">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/_light_black_"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewOverviewLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="6dp"
                        android:text="@string/overview"
                        android:fontFamily="@font/per_regular"
                        android:textSize="26sp" />

                    <TextView
                        android:id="@+id/textViewOverviewMovie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/per_regular"
                        android:textColor="@color/dark_white"
                        android:layout_marginEnd="5dp"
                        android:textSize="22sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardViewOverview">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    android:background="@color/_light_black_">

                    <TextView
                        android:id="@+id/textViewRatingLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rating"
                        android:textColor="@color/white"
                        android:textSize="26sp"
                        android:fontFamily="@font/per_regular"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textViewRatingMovie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:textColor="@color/white"
                        android:textSize="26sp"
                        android:fontFamily="@font/per_italic"
                        app:layout_constraintStart_toEndOf="@id/textViewRatingLabel"
                        app:layout_constraintTop_toTopOf="parent" />


                    <ImageView
                        android:id="@+id/imageViewBrightStar"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="7dp"
                        android:contentDescription="@string/star"
                        android:src="@drawable/bright_star"
                        app:layout_constraintBottom_toBottomOf="@id/textViewRatingMovie"
                        app:layout_constraintStart_toEndOf="@id/textViewRatingMovie"
                        app:layout_constraintTop_toTopOf="@id/textViewRatingMovie" />

                    <TextView
                        android:id="@+id/textViewVoteCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:textSize="14sp"
                        android:fontFamily="@font/per_italic"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="@id/imageViewBrightStar"
                        app:layout_constraintStart_toEndOf="@id/imageViewBrightStar" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textViewTrailers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:textColor="@color/white"
                android:text="@string/trailers"
                android:textSize="31sp"
                android:fontFamily="@font/per_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardViewRating" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewTrailers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/textViewTrailers"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:nestedScrollingEnabled="false"
                android:background="@color/light_black"
                />

            <TextView
                android:id="@+id/textViewReviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:textColor="@color/white"
                android:text="@string/reviews"
                android:textSize="31sp"
                android:fontFamily="@font/per_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recyclerViewTrailers" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewReviews"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/textViewReviews"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:nestedScrollingEnabled="false"
                android:background="@color/light_black"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>